# make_examples

./: .gitignore
.github/workflows/: build_and_test.yaml
MakeFile_Exercise/: Makefile  main.cpp  utilites_floats.cpp  utilites_ints.cpp  utilities.h
autoconf/: Makefile.am  clean_up_folder.sh  configure.ac  prepare_dist.sh
autoconf/src/: Makefile.am  app
make_example_gtest/: Makefile
make_example_gtest/app/src/: app_source.cpp
make_example_gtest/lib/: Makefile
make_example_gtest/lib/include/CustomLib/: classFromLibrary.h
make_example_gtest/lib/src/: classFromLibrary.cpp
make_example_gtest/lib/ut/: Makefile  tests.cpp
make_example_vars/: Makefile
make_lib_and_app_example/: Makefile
make_lib_and_app_example/app/: Makefile
make_lib_and_app_example/lib/: Makefile
make_simple_example/: Makefile  main.cpp
